broken layout -desktop

--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
 </section>
 
 <section class="third yelbg cpad snap">
-    <img src="MOBtools.png" srcset="desktools.png 768w, MOBtools.png 0w" alt="" class="thirdimg">
+    <!-- <img src="MOBtools.png" srcset="desktools.png 768w, MOBtools.png 0w" alt="" class="thirdimg"> -->
+    <picture>
+        <source media="(max-width: 766px)" srcset="MOBtools.png" >
+        <source media="(min-width: 768px)" srcset="desktools.png">
+        <img src="MOBtools.png" alt="" style="max-width: 300px; " class="desk3">
+      </picture>
     <p class="threetxt">Using the best technolgy available out there
         in the market to serve your needs</p>
 </section>
