semi fixed layout -desktop

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
     
     <p class="hero6">Send us a mail
         regarding your needs and we’ll get back to you </p>
-        <div class="mial">
-        <input type="text" value="mail@anjane.tech" class="mail" disabled id="mailid">
-        <button class="mbtn" onclick="ctc()"><img src="copy.png" alt=""></button>
-        </div>
+<div class="mial">
+        <input type="text" value="mail@anjane.tech" class="mail" disabled id="mailid"> <br>
+        <div class="mbtn" onclick="ctc()">copy to clipboard<img src="copy.png" alt=""></div>
+</div>
     </div>
     <div class="darbg forty">
 
