logo size increase and spacing

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 <div class="container">
 
 <section class="first cpad snap">  
+    <br><br><br>
     <div class="topnav">
-        <img src="topnav.png" alt="">
+       <a href="/" class="mobcen"><img src="topnav.png" alt="" class="topnavpng"></a> 
     </div>
+    <br><br>
 
     <div class="firstcontainer">
 
@@ -48,8 +50,8 @@
 <section class="third yelbg cpad snap">
     <!-- <img src="MOBtools.png" srcset="desktools.png 768w, MOBtools.png 0w" alt="" class="thirdimg"> -->
     <picture>
-        <source media="(max-width: 766px)" srcset="MOBtools.png" >
-        <source media="(min-width: 768px)" srcset="desktools.png">
+        <source media="(max-width: 600px)" srcset="MOBtools.png" >
+        <source media="(min-width: 599px)" srcset="desktools.png">
         <img src="MOBtools.png" alt="" style="max-width: 300px; " class="desk3">
       </picture>
     <p class="threetxt">Using the best technolgy available out there
@@ -97,6 +99,8 @@
 <div class="mial">
         <input type="text" value="mail@anjane.tech" class="mail" disabled id="mailid"> <br>
         <div class="mbtn" onclick="ctc()">copy to clipboard<img src="copy.png" alt=""></div>
+        <br><br>
+        <div class="mblack"></div>
 </div>
     </div>
     <div class="darbg forty">
@@ -105,9 +109,12 @@
             <img src="bottomnav.png" alt="">
         </div>
         Copyright 2021
+       
 
-
-    </div>    
+        <br>
+        <br>
+    </div> 
+       
 </section>
 
 
