--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
 <div class="cardrow">
     <div class="tcard">
         <img src="1.png" alt="" class="timg">
-        <div class="tcon"><div class="ttitle">Hello</div>Blah Blah Blah</div>
+        <div class="tcon"><div class="ttitle">Bala Ramachandran</div>Data Engineering Consultant with experience in both traditional and Cloud Data Warehouse design and build. Have worked for Top Banks like HSBC & BNY Mellon, Top Higher Ed like NYU and startups</div>
     </div>
     <div class="tcard">
-        <img src="2.png" alt="" class="timg">
-        <div class="tcon"><div class="ttitle">Hello</div>Blah Blah Blah</div>
+        <img src="2.jpeg" alt="" class="timg">
+        <div class="tcon"><div class="ttitle">Sudha Chandrasekhar</div>Administration & Project Management Professional experienced in handling operations for leading International Organizations like Nokia Siemens, Sify, etc</div>
     </div>
     <div class="tcard">
-        <img src="3.png" alt="" class="timg">
-        <div class="tcon"><div class="ttitle">Hello</div>Blah Blah Blah</div>
+        <img src="3.jpeg" alt="" class="timg">
+        <div class="tcon"><div class="ttitle">Venkat Ramachandran</div>Data Engineering & Integration Consultant with vast experience in Finance domain</div>
     </div>
 </div>
     <p class="fiveetxt">We help you make
