--- a/index.html
+++ b/index.html
@@ -75,22 +75,26 @@
         <img src="1.png" alt="" class="timg">
         <div class="tcon">
             <div class="ttitle">Bala Ramachandran</div>
+            <div class="ttext">
             Data Engineering Consultant with experience in both traditional and Cloud Data Warehouses.
-            Have worked for top Banks like HSBC & BNY Mellon, Top Higher Ed like NYU and startups
+            Have worked for top Banks like HSBC & BNY Mellon, Top Higher Education (NYU) and startups.
+            </div>
         </div>
     </div>
     <div class="tcard">
         <img src="2.jpeg" alt="" class="timg">
         <div class="tcon">
             <div class="ttitle">Sudha Chandrasekhar</div>
-            Administration & Project Management Professional experienced in handling operations for leading International Organizations like Nokia Siemens, Sify, etc
+            <div class="ttext">
+              Human Resources Administration & Project Management Professional experienced in handling operations for leading International Organizations like Nokia Siemens, Sify..
+            </div>
         </div>
     </div>
     <div class="tcard">
         <img src="3.jpeg" alt="" class="timg">
         <div class="tcon">
             <div class="ttitle">Venkat Ramachandran</div>
-            Data Engineering & Integration Consultant with vast experience in US Banking domain
+            <div class="ttext">Data Engineering & Integration Consultant with vast experience in US Banking domain.</div>
         </div>
     </div>
 </div>
