--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="darbg forty">
-                <div class="topnav">
+                <div class="bottomnav">
                     <img src="bottomnav.png" alt="">
                 </div>
                 Copyright 2021
