--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <picture>
                 <source media="(max-width: 600px)" srcset="MOBtools.png" >
                 <source media="(min-width: 599px)" srcset="desktools.png">
-                <img src="MOBtools.png" alt="" style="max-width: 300px; " class="desk3">
+                <img src="MOBtools.png" alt="" style="max-width: 300px; max-height: 75vh; " class="desk3">
             </picture>
             <p class="threetxt">
                 Using the best technolgy available out there in the market to serve your needs
