Updated the width properties

--- a/ipl2023/index.html
+++ b/ipl2023/index.html
@@ -137,10 +137,10 @@
         <div id="ipl_title" style="position:absolute; top:10% ;left:20%; font-weight:normal ">
         </div>
       </div>
-      <div id="mainContent" style="width:100vw !important">
-        <div id="map" style="width: 42vw !important;position:relative; float: left;overflow-x: auto; left:-25px;">
+      <div id="mainContent" style="width:100% !important; min-width: 800px !important; overflow-x: scroll;">
+        <div id="map" style="width: 42% !important;position:relative; float: left;overflow-x: auto; left:-25px;">
         </div>
-        <div id="schedule" style="width: 55vw !important;height: 90vh !important; position:relative; float: right; overflow-x: auto; top:20px; margin:15px 15px;">
+        <div id="schedule" style="width: 55% !important; min-width:800px; height: 90vh !important; position:relative; float: right; overflow-x: auto; top:20px; margin:15px 15px;">
           <table id="scheduleDataTable" class="display compact responsive" style="overflow-x: scroll;"></table>
         </div>
       </div>      
