--- a/ipl2023/stats/index.html
+++ b/ipl2023/stats/index.html
@@ -601,7 +601,9 @@ text-shadow: 3px 3px 3px #48ff00;
 #team_wicket_capabilities {
   flex: 1;
 }
-
+#BWN {
+  flex: 1;
+}
 
 
 
@@ -650,13 +652,13 @@ text-shadow: 3px 3px 3px #48ff00;
           <div id="_100s">Right Div</div>
         </div>
 
-        <div class="container_1">
+        <!-- <div class="container_1">
           <div id="bat_sr">Left Div</div>
           <div id="duck">Right Div</div>
-        </div>
+        </div> -->
 
         <div class="container_1">
-          <div id="NO">Left Div</div>
+          <div id="duck">Right Div</div>
           <div id="partnership">Right Div</div>
         </div>
 
@@ -670,7 +672,7 @@ text-shadow: 3px 3px 3px #48ff00;
         <div id="partnership"></div> -->
         
 
-        <div id="EB"></div>
+        <!-- <div id="EB"></div> -->
 
         <!-- <div id="Total_runs_vs_SR"></div> -->
 
@@ -679,19 +681,26 @@ text-shadow: 3px 3px 3px #48ff00;
           <div id="most_maidens">Right Div</div>
         </div>
         <div class="container_1">
-          <div id="ER">Left Div</div>
+          <div id="BWN">Left Div</div>
           <div id="bowl_sr">Right Div</div>
         </div>
+
+        <!-- <div class="container_1">
+          <div id="">Left Div</div>
+          <div id="bowl_sr">Right Div</div>
+        </div> -->
 
         <div class="container_1">
           <div id="_4w">Left Div</div>
           <div id="_5w">Right Div</div>
         </div>
 
-        <div class="container_1">
-          <div id="RC">Left Div</div>
+        <!-- <div class="container_1">
+          <div id="ER">Left Div</div>
           <div id="RCW">Right Div</div>
-        </div>
+        </div> -->
+
+        
 
         <div class="container_1">
           <div id="catches">Left Div</div>
@@ -726,6 +735,7 @@ text-shadow: 3px 3px 3px #48ff00;
         <!-- <div id="team_points"></div> -->
         <div id="team_max_score"></div>
         <div id="team_wicket_capabilities"></div>
+        <div id="team_getting_out"></div>
         <!-- <div id="team_win_on_game_time"></div> -->
 
 
@@ -762,17 +772,17 @@ text-shadow: 3px 3px 3px #48ff00;
         $("#bat_sr").load("bat_sr.html");
         $("#Total_runs_vs_SR").load("Total_runs_vs_SR.html");
         $("#most_wickets").load("most_wickets.html");
-        $("#ER").load("ER.html");
+        // $("#ER").load("ER.html");
         $("#most_maidens").load("most_maidens.html");
-        $("#bowl_sr").load("bowl_sr.html");
+        // $("#bowl_sr").load("bowl_sr.html");
         $("#_4w").load("_4w.html");
         $("#_5w").load("_5w.html");
         $("#RC").load("RC.html");
         $("#bowl_sr").load("bowl_sr.html");
-        $("#RC").load("RC.html");
-        $("#RCW").load("RCW.html");
-        $("#NO").load("NO.html");
-        $("#EB").load("EB.html");
+        // $("#RC").load("RC.html");
+        // $("#RCW").load("RCW.html");
+        // $("#NO").load("NO.html");
+        // $("#EB").load("EB.html");
         $("#catches").load("catches.html")
         $("#toss_winner_choice").load("toss_winner_choice.html");
         // $("#team_most_4s").load("team_most_4s.html");
@@ -786,6 +796,8 @@ text-shadow: 3px 3px 3px #48ff00;
         $("#partnership").load("partnership.html");
         $("#team_max_score").load("team_max_score.html");
         $("#wkt_perc").load("wkt_perc.html");
+        $("#BWN").load("BWN.html");
+        $("#team_getting_out").load("team_getting_out.html");
 
     //     window.addEventListener('beforeunload', function() {
     //   // Store the current scroll position in session storage
