--- a/ipl2023/stats/index.html
+++ b/ipl2023/stats/index.html
@@ -637,15 +637,15 @@ text-shadow: 3px 3px 3px #48ff00;
       <div id="mainContent">
         
         <div class="container_1">
-          <div id="most_6s">Left Div</div>
-          <div id="most_4s">Right Div</div>
+          <div id="most_6s_4s">Left Div</div>
+          <div id="most_runs">Right Div</div>
         </div>
         <!-- <div id="most_6s"></div>
         <div id="most_4s"></div> -->
-        <div class="container_1">
+        <!-- <div class="container_1">
           <div id="most_runs">Left Div</div>
           <div id="HS">Right Div</div>
-        </div>
+        </div> -->
 
         <div class="container_1">
           <div id="_50s">Left Div</div>
@@ -763,12 +763,13 @@ text-shadow: 3px 3px 3px #48ff00;
   
   <script type="text/javascript">
       $(function () {
-        $("#most_6s").load("most_6s.html");
-        $("#most_4s").load("most_4s.html");
+        $("#most_6s_4s").load("most_6s_4s.html");
+        // $("#most_6s").load("most_6s.html");
+        // $("#most_4s").load("most_4s.html");
         $("#most_runs").load("most_runs.html");
         $("#_50s").load("_50s.html");
         $("#_100s").load("_100s.html");
-        $("#HS").load("HS.html");
+        // $("#HS").load("HS.html");
         $("#bat_sr").load("bat_sr.html");
         $("#Total_runs_vs_SR").load("Total_runs_vs_SR.html");
         $("#most_wickets").load("most_wickets.html");
